tests/paczka1/small_fuzzy/80668625.err
Error in line 1: 0RXRgPNSMty A990 51,4
Error in line 5: A142 A142 62,1
